fixed the layout to be more comprehensive, need to fix shadowing and text wrapping when the width is changed

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,31 +1,31 @@
+.aboutContainer {
+    border: 1px solid red;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+/* flex container */
 .aboutBody {
+    border: 1px solid red;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    max-width: 100vw;
+    max-width: 50%;
+    margin: 0 auto;
 }
 
-.mikey {
-    background: url('../pics/MichaelMarinos.jpg') no-repeat;
-    background-size: 100%; /** moved this property down */
-    height: 50vh;
-    width: 40vw;}
-    
-.lucas {
-    background: url('../pics/LucasOrton.jpg') no-repeat;
-    background-size: 100%; /** moved this property down */
-    height: 50vh;
-    width: 40vw;}
+/* flex items */
+.theBoys {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
 
-.marcus {
-    background: url('../pics/MarcusMarinos.jpg') no-repeat;
-    background-size: 100%; /** moved this property down */
-    height: 50vh;
-    width: 40vw;}
+.theBoys h3{
+  border: 1px solid red;
+  margin: 0 auto;
+}
 
-.matt {
-    background: url('../pics/MatthewMarinos.jpg') no-repeat;
-    background-size: 100%; /** moved this property down */
-    height: 50vh;
-    width: 40vw;}
+.boys {
+max-width: 100%;
+}
